--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="test_alarm">Test alarm</string>
     <string name="dismiss">Dismiss</string>
     <string name="time_to_wake_up">Time to wake up!</string>
+    <string name="bed_time">Bed time</string>
+    <string name="wake_up">Wake up</string>
 </resources>
